[package]
name = "openssl-probe"
version = "0.1.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/openssl-probe"
homepage = "https://github.com/alexcrichton/openssl-probe"
description = """
Tool for helping to find SSL certificate locations on the system for OpenSSL
"""
readme = "README.md"
